Clean up directory Move c++ generator files to a folder. Move webpage files to another folder. This'll make development easier to get started on...

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1369,7 +1369,7 @@ function load_script(url, callback){
         };
     }
 
-    script.src = url;
+    script.src = "js/"+url;
     document.getElementsByTagName("head")[0].appendChild(script);
 }
 
