--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <center>
+	Thanks to Brad Grantam's <a href="http://plunk.org/~grantham/ray1">work.</a>
     <table>
     <tr>
     <td>
