Add changes from master

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <option value="rotate_object" selected>Rotate Object</option>
     <option value="zoom_object">Zoom Object</option>
     <option value="rotate_light">Rotate Light</option>
+    <option value="rotate_scene">Rotate Scene</option>
+    <option value="translate_scene">Translate Scene</option>
     </select>
 
     <select id="resolution_list" onchange="change_resolution()">
